2007/11/09	fix some bugs with getopt
		code improvement
2007/10/25	mtag-2 released
		search tags with SQL: tag like $tag
			-> user is allowd to search for tag% to get tag.* etc.
		reimplement getopt. now supporting longoptions
		fix sql injection bug
2007/10/23	implement "mtag -l" to list all tags
2007/10/22	edit README
		wipe all old database entrys befor syncing with infile tags
		support stripping leading path, feature reqest: #3798
		fix paths, bug: #12231
2007/10/21	init changlog
		get database from env(MTAG_DB) if set